--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
         "inversify": "^6.0.2",
         "inversify-express-utils": "^6.5.0",
         "jsonwebtoken": "^9.0.2",
-        "npm": "^11.6.0",
         "passport": "^0.7.0",
         "passport-google-oauth20": "^2.0.0",
         "pino": "^9.2.0",
@@ -44,9 +43,7 @@
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "yamljs": "^0.3.0",
-        "zod": "^3.25.56"
-    },
-    "devDependencies": {
+        "zod": "^3.25.56",
         "@types/cors": "^2.8.19",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.9",
