--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,10 +38,12 @@ deploy_to_ec2:
     image: alpine:latest
     before_script:
         - 'which ssh-agent || ( apk update && apk add openssh-client )'
-        - eval $(ssh-agent -s)
-        - echo "$SSH_PRIVATE_KEY" | base64 -d | ssh-add -
-        - mkdir -p ~/.ssh && chmod 700 ~/.ssh
-        - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts && chmod 644 ~/.ssh/known_hosts
+        - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
+        - chmod 600 deploy_key.pem
+        - mkdir -p ~/.ssh
+        - chmod 700 ~/.ssh
+        - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts
+        - chmod 644 ~/.ssh/known_hosts
     script:
         - echo "Deploying artifacts to production server..."
         - ssh ${SSH_USER}@${SSH_SERVER_IP} "mkdir -p ~/taskmanager-prod"
