--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,25 @@
 stages:
+    - debug
     - build
     - deploy
+
+ebug_key:
+    stage: debug
+    image: alpine:latest
+    script:
+        - apk add --no-cache openssh-client
+        - echo "--- Decoding the SSH_PRIVATE_KEY variable ---"
+        - echo "$SSH_PRIVATE_KEY" | base64 -d > debug_key.pem
+        - echo "--- Checking file permissions ---"
+        - ls -l debug_key.pem
+        - echo "--- Displaying the first few lines of the decoded key ---"
+        - head -n 3 debug_key.pem
+        - echo "--- Displaying the last few lines of the decoded key ---"
+        - tail -n 3 debug_key.pem
+        - echo "--- Attempting to read the key with ssh-keygen to validate it ---"
+        - ssh-keygen -y -f debug_key.pem
+    rules:
+        - when: manual
 
 build_artifacts:
     stage: build
@@ -36,41 +55,24 @@ build_artifacts:
 deploy_to_ec2:
     stage: deploy
     image: alpine:latest
-    before_script:
-        - 'which ssh-agent || ( apk update && apk add openssh-client )'
+    script:
+        - apk add --no-cache openssh-client docker-compose
         - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
         - chmod 600 deploy_key.pem
-        - mkdir -p ~/.ssh
-        - chmod 700 ~/.ssh
-        - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts
-        - chmod 644 ~/.ssh/known_hosts
-    script:
         - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
         - echo "Deploying artifacts to production server..."
         - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "mkdir -p ~/taskmanager-prod"
         - scp -r $SSH_OPTIONS ./dist ./prisma ./node_modules ./package.json ./docker-compose.yml ./nginx ./frontend-dist ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
-
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
               cd ~/taskmanager-prod &&
-
               echo 'Setting up production .env file...' &&
               echo 'DATABASE_URL=${DATABASE_URL}' > .env &&
               echo 'PORT=${PORT}' >> .env &&
-              echo 'JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}' >> .env &&
-              echo 'JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}' >> .env &&
-              echo 'JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}' >> .env &&
-              echo 'JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}' >> .env &&
-              echo 'GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}' >> .env &&
-              echo 'GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}' >> .env &&
-              echo 'RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY}' >> .env &&
-              echo 'GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}' >> .env &&
-              echo 'FRONTEND_URL=${FRONTEND_URL}' >> .env &&
+              # ... rest of your echo commands ...
               echo 'NODE_ENV=production' >> .env &&
-
               echo 'Running database migrations...' &&
               docker-compose run --rm app npx prisma migrate deploy &&
-
               echo 'Restarting services with Docker Compose...' &&
               docker-compose up -d --build --force-recreate
             "
