--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ deploy_to_ec2:
     image: alpine:latest
     script:
         - apk add --no-cache openssh-client docker-compose
-        - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
+        - echo "$SSH_PRIVATE_KEY_file" | base64 -d > deploy_key.pem
         - chmod 600 deploy_key.pem
         - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
         - echo "Deploying artifacts to production server..."
