--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-    # Service 1: Our Application ('app')
     app:
-        build: .
+        # This uses the GitLab CI_REGISTRY_IMAGE predefined variable
+        image: registry.gitlab.com/ivan.brovko/webserver_taskmanager:latest
         restart: always
         env_file: [".env"]
         depends_on:
