--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,14 +12,18 @@ build_artifacts:
         # Log in to the GitLab Container Registry
         - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
     script:
-        # Build the final production image using your Dockerfile
+        # --- Backend Build (No changes) ---
         - docker build -t $CI_REGISTRY_IMAGE:latest .
-        # Push the image to the GitLab registry
         - docker push $CI_REGISTRY_IMAGE:latest
 
-        # --- Frontend Build (still needed) ---
+        # --- Frontend Build (Changes are here) ---
         - echo "Cloning and building frontend..."
-        - apk add --no-cache git nodejs npm
+        - apk add --no-cache git curl
+        - curl -L https://nodejs.org/dist/v22.18.6/node-v22.18.6-linux-x64.tar.xz -o node.tar.xz
+        - tar -xf node.tar.xz
+        - export PATH=$PWD/node-v22.18.6-linux-x64/bin:$PATH
+        - node -v
+        - npm -v
         - git clone ${FRONTEND_GIT_URL} ../frontend
         - cd ../frontend && npm ci && npm run build
         - mv dist ../webserver_taskmanager/frontend-dist
