--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,22 +4,18 @@ stages:
 
 build_artifacts:
     stage: build
-    # We need a Docker-in-Docker setup to build images
     image: docker:20.10.16
     services:
         - docker:20.10.16-dind
     before_script:
-        # Log in to the GitLab Container Registry
         - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
     script:
-        # --- Backend Build (No changes) ---
         - docker build -t $CI_REGISTRY_IMAGE:latest .
         - docker push $CI_REGISTRY_IMAGE:latest
 
-        # --- Frontend Build (Changes are here) ---
         - echo "Cloning and building frontend..."
-        - apk add --no-cache git curl
-        - curl -L https://nodejs.org/dist/v22.18.6/node-v22.18.6-linux-x64.tar.xz -o node.tar.xz
+        - apk add --no-cache git curl xz
+        - curl -L "https://nodejs.org/dist/v22.18.6/node-v22.18.6-linux-x64.tar.xz" -o node.tar.xz
         - tar -xf node.tar.xz
         - export PATH=$PWD/node-v22.18.6-linux-x64/bin:$PATH
         - node -v
@@ -29,7 +25,6 @@ build_artifacts:
         - mv dist ../webserver_taskmanager/frontend-dist
     artifacts:
         paths:
-            # We now only need the frontend and deployment files
             - docker-compose.yml
             - nginx/
             - frontend-dist/
