--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,7 @@
 stages:
-    - build
     - deploy
 
-build_artifacts:
-    stage: build
-    image: docker:20.10.16
-    services:
-        - docker:20.10.16-dind
-    before_script:
-        - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
-    script:
-        - docker build -t $CI_REGISTRY_IMAGE:latest .
-        - docker push $CI_REGISTRY_IMAGE:latest
-
-        - echo "Cloning and building frontend..."
-        - apk add --no-cache git curl xz
-        - curl -L "https://nodejs.org/dist/v22.18.6/node-v22.18.6-linux-x64.tar.xz" -o node.tar.xz
-        - tar -xf node.tar.xz
-        - export PATH=$PWD/node-v22.18.6-linux-x64/bin:$PATH
-        - node -v
-        - npm -v
-        - git clone ${FRONTEND_GIT_URL} ../frontend
-        - cd ../frontend && npm ci && npm run build
-        - mv dist ../webserver_taskmanager/frontend-dist
-    artifacts:
-        paths:
-            - docker-compose.yml
-            - nginx/
-            - frontend-dist/
-
-deploy_to_ec2:
+deploy_backend:
     stage: deploy
     image: alpine:latest
     script:
@@ -40,10 +12,9 @@ deploy_to_ec2:
         - mkdir -p ~/.ssh && chmod 700 ~/.ssh
         - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts && chmod 644 ~/.ssh/known_hosts
 
-        - echo "Deploying configuration files..."
+        - echo "Deploying backend to server..."
         - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "mkdir -p ~/taskmanager-prod"
-        # Copy only the necessary files, NO node_modules!
-        - scp -r $SSH_OPTIONS ./docker-compose.yml ./nginx ./frontend-dist ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
+        - scp $SSH_OPTIONS ./docker-compose.deploy.yml ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/docker-compose.yml
 
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
@@ -53,7 +24,17 @@ deploy_to_ec2:
               docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY} &&
 
               echo 'Setting up production .env file...' &&
-              # ... (all your echo commands are the same) ...
+              echo 'DATABASE_URL=postgresql://myuser:mypassword@db:5432/taskmanager' > .env &&
+              echo 'PORT=3000' >> .env &&
+              echo 'JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}' >> .env &&
+              echo 'JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}' >> .env &&
+              echo 'JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}' >> .env &&
+              echo 'JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}' >> .env &&
+              echo 'GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}' >> .env &&
+              echo 'GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}' >> .env &&
+              echo 'RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY}' >> .env &&
+              echo 'GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}' >> .env &&
+              echo 'FRONTEND_URL=${FRONTEND_URL}' >> .env &&
               echo 'NODE_ENV=production' >> .env &&
 
               echo 'Pulling the latest application image...' &&
@@ -62,6 +43,8 @@ deploy_to_ec2:
               echo 'Running database migrations...' &&
               docker-compose run --rm app npx prisma migrate deploy &&
 
-              echo 'Restarting services...' &&
+              echo 'Starting services...' &&
               docker-compose up -d --force-recreate
             "
+    rules:
+        - if: $CI_COMMIT_BRANCH == 'main'
