--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ build_job:
     before_script:
         - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
     script:
-        - docker build -t ${CI_REGISTRY_IMAGE}/app:latest .
-        - docker push ${CI_REGISTRY_IMAGE}/app:latest
+        - docker build -t ${CI_REGISTRY_IMAGE}:latest .
+        - docker push ${CI_REGISTRY_IMAGE}:latest
     artifacts:
         paths:
             - docker-compose.deploy.yml
