--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
     app:
-        # This uses the GitLab CI_REGISTRY_IMAGE predefined variable
-        image: registry.gitlab.com/ivan.brovko/webserver_taskmanager:latest
+        build: .
         restart: always
         env_file: [".env"]
         depends_on:
