--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,56 @@
 stages:
+    - build
     - deploy
 
-deploy_job:
+build_artifacts:
+    stage: build
+    image: docker:20.10.16
+    services:
+        - docker:20.10.16-dind
+    before_script:
+        - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
+    script:
+        - docker build -t ${CI_REGISTRY_IMAGE}:latest .
+        - docker push ${CI_REGISTRY_IMAGE}:latest
+        - echo "Cloning and building frontend..."
+        - apk add --no-cache git curl xz
+        - curl -L "https://nodejs.org/dist/v22.18.6/node-v22.18.6-linux-x64.tar.xz" -o node.tar.xz
+        - tar -xf node.tar.xz
+        - export PATH=$PWD/node-v22.18.6-linux-x64/bin:$PATH
+        - git clone ${FRONTEND_GIT_URL} ../frontend
+        - cd ../frontend && npm ci && npm run build
+        - mv dist ../webserver_taskmanager/frontend-dist
+    artifacts:
+        paths:
+            - docker-compose.yml
+            - nginx/
+            - frontend-dist/
+
+deploy_to_ec2:
     stage: deploy
     image: alpine:latest
     script:
-        - apk add --no-cache openssh-client rsync
+        - apk add --no-cache openssh-client docker-compose
         - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
         - chmod 600 deploy_key.pem
         - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
         - mkdir -p ~/.ssh && chmod 700 ~/.ssh
         - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts && chmod 644 ~/.ssh/known_hosts
 
-        - echo "Deploying application source to server..."
-        - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "mkdir -p ~/taskmanager-prod"
-        - rsync -avz -e "ssh $SSH_OPTIONS" --exclude 'node_modules' ./ ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
-
+        - echo "Deploying full stack to production server..."
+        - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "rm -rf ~/taskmanager-prod && mkdir -p ~/taskmanager-prod"
+        - scp -r $SSH_OPTIONS ./docker-compose.yml ./nginx ./frontend-dist ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
               cd ~/taskmanager-prod &&
               
-              echo 'Setting up production .env file...' &&
+              docker login -u ${REGISTRY_USER} -p ${REGISTRY_PASSWORD} ${CI_REGISTRY} &&
+              
+              # ... All of your .env echo commands ...
               echo 'DATABASE_URL=postgresql://myuser:mypassword@db:5432/taskmanager' > .env &&
-              echo 'PORT=3000' >> .env &&
-              echo 'JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}' >> .env &&
-              echo 'JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}' >> .env &&
-              echo 'JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}' >> .env &&
-              echo 'JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}' >> .env &&
-              echo 'GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}' >> .env &&
-              echo 'GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}' >> .env &&
-              echo 'RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY}' >> .env &&
-              echo 'GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}' >> .env &&
-              echo 'FRONTEND_URL=${FRONTEND_URL}' >> .env &&
+              # ...
               echo 'NODE_ENV=production' >> .env &&
 
-              echo 'Building and starting services on the server...' &&
-              docker compose build &&
-              docker compose run --rm app npx prisma migrate deploy &&
+              docker compose pull app &&
               docker compose up -d --force-recreate
             "
-    rules:
-        - if: $CI_COMMIT_BRANCH == 'main'
