--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
     - build
     - deploy
 
-build_artifacts:
+build_backend:
     stage: build
     image: docker:20.10.16
     services:
@@ -10,25 +10,31 @@ build_artifacts:
     before_script:
         - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
     script:
+        - echo "Building and pushing backend image..."
         - docker build -t ${CI_REGISTRY_IMAGE}:latest .
         - docker push ${CI_REGISTRY_IMAGE}:latest
-        - echo "Cloning and building frontend..."
-        - apk add --no-cache git curl xz
-        - curl -L "https://nodejs.org/dist/v22.18.6/node-v22.18.6-linux-x64.tar.xz" -o node.tar.xz
-        - tar -xf node.tar.xz
-        - export PATH=$PWD/node-v22.18.6-linux-x64/bin:$PATH
-        - git clone ${FRONTEND_GIT_URL} ../frontend
-        - cd ../frontend && npm ci && npm run build
-        - mv dist ../webserver_taskmanager/frontend-dist
+
+build_frontend:
+    stage: build
+    image: node:22-alpine
+    script:
+        - echo "Installing frontend dependencies..."
+        - apk add --no-cache git
+        - git clone ${FRONTEND_GIT_URL} frontend
+        - cd frontend
+        - npm ci
+        - echo "Building frontend..."
+        - npm run build
     artifacts:
         paths:
-            - docker-compose.yml
-            - nginx/
-            - frontend-dist/
+            - frontend/dist/
 
 deploy_to_ec2:
     stage: deploy
     image: alpine:latest
+    needs:
+        - build_backend
+        - build_frontend
     script:
         - apk add --no-cache openssh-client docker-compose
         - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
@@ -39,7 +45,9 @@ deploy_to_ec2:
 
         - echo "Deploying full stack to production server..."
         - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "rm -rf ~/taskmanager-prod && mkdir -p ~/taskmanager-prod"
-        - scp -r $SSH_OPTIONS ./docker-compose.yml ./nginx ./frontend-dist ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
+        - scp -r $SSH_OPTIONS ./frontend/dist/* ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/frontend-dist/
+        - scp $SSH_OPTIONS ./docker-compose.yml ./nginx/nginx.conf ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
+
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
               cd ~/taskmanager-prod &&
