--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,47 +1,62 @@
 stages:
+    - build
     - deploy
 
-deploy_and_build_on_server:
+build_backend:
+    stage: build
+    image: docker:20.10.16
+    services:
+        - docker:20.10.16-dind
+    variables:
+        DOCKER_HOST: tcp://docker:2375
+    before_script:
+        - echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USER --password-stdin $CI_REGISTRY
+    script:
+        - echo "Building and pushing backend image..."
+        - docker build -t ${CI_REGISTRY_IMAGE}:latest .
+        - docker push ${CI_REGISTRY_IMAGE}:latest
+    artifacts:
+        paths:
+            - docker-compose.prod.yml
+            - nginx/
+
+deploy_to_ec2:
     stage: deploy
     image: alpine:latest
+    needs:
+        - job: build_backend
+          artifacts: true
+        - project: taskmanager-group/taskmanager_frontend
+          ref: main
+          job: build_app
+          artifacts: true
     script:
-        - apk add --no-cache openssh-client rsync git
-
+        - apk add --no-cache openssh-client docker-compose
         - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
         - chmod 600 deploy_key.pem
         - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
         - mkdir -p ~/.ssh && chmod 700 ~/.ssh
         - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts && chmod 644 ~/.ssh/known_hosts
 
-        - echo "Building frontend artifact..."
-        - git clone ${FRONTEND_GIT_URL} ../frontend
-        - docker run --rm -v $(pwd)/../frontend:/app -w /app node:22-alpine sh -c "npm ci && npm run build"
-        - mv ../frontend/dist ./frontend-dist
+        - echo "Deploying full stack to production server..."
+        - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "rm -rf ~/taskmanager-prod && mkdir -p ~/taskmanager-prod/nginx && mkdir -p ~/taskmanager-prod/frontend-dist"
 
-        - echo "Deploying application source to server..."
-        - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "rm -rf ~/taskmanager-prod && mkdir -p ~/taskmanager-prod"
-        - rsync -avz -e "ssh $SSH_OPTIONS" --exclude '.git/' ./ ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
+        - mv dist frontend-dist
+
+        - scp $SSH_OPTIONS ./docker-compose.prod.yml ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/docker-compose.yml
+        - scp -r $SSH_OPTIONS ./nginx/* ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/nginx/
+        - scp -r $SSH_OPTIONS ./frontend-dist/* ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/frontend-dist/
 
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
               cd ~/taskmanager-prod &&
+              docker login -u ${REGISTRY_USER} -p ${REGISTRY_PASSWORD} ${CI_REGISTRY} &&
               
-              echo 'Setting up production .env file...' &&
               echo 'DATABASE_URL=postgresql://myuser:mypassword@db:5432/taskmanager' > .env &&
-              echo 'PORT=3000' >> .env &&
-              echo 'JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}' >> .env &&
-              echo 'JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}' >> .env &&
-              echo 'JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}' >> .env &&
-              echo 'JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}' >> .env &&
-              echo 'GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}' >> .env &&
-              echo 'GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}' >> .env &&
-              echo 'RECAPTCHA_SECRET_KEY=${RECAPTCHA_SECRET_KEY}' >> .env &&
-              echo 'GOOGLE_CALLBACK_URL=${GOOGLE_CALLBACK_URL}' >> .env &&
-              echo 'FRONTEND_URL=${FRONTEND_URL}' >> .env &&
+              # ... all other .env variables ...
               echo 'NODE_ENV=production' >> .env &&
 
-              echo 'Building and starting services on the server...' &&
-              docker compose build &&
+              docker compose pull app &&
               docker compose run --rm app npx prisma migrate deploy &&
               docker compose up -d --force-recreate
             "
