--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    # Use the image we will build and push to the registry
+    # This pulls the pre-built image from the registry
     image: registry.gitlab.com/taskmanager-group/webserver_taskmanager:latest
     restart: always
     env_file: [".env"]
@@ -13,6 +13,22 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+
+  nginx:
+    image: nginx:stable-alpine
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /var/www/html:/var/www/html
+      - ./frontend-dist:/usr/share/nginx/html/frontend
+    depends_on:
+      app:
+        condition: service_healthy
+
   db:
     image: postgres:14.1-alpine
     restart: always
@@ -24,5 +40,12 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/www/html:/var/www/html
+
 volumes:
   db_data:
