--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,28 @@
 stages:
+    - test
+    - build
     - deploy
 
-deploy:
-    stage: deploy
+test_backend:
+    stage: test
     image: docker:20.10.16
     services:
-        - docker:20.10.16-dind
+        - name: docker:20.10.16-dind
+          alias: docker
+    variables:
+        DOCKER_HOST: tcp://docker:2375
+    script:
+        - echo "Running backend integration tests..."
+        - apk add --no-cache docker-compose
+        - docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
+        - echo "Tests passed!"
+
+build_artifacts:
+    stage: build
+    image: docker:20.10.16
+    services:
+        - name: docker:20.10.16-dind
+          alias: docker
     variables:
         DOCKER_HOST: tcp://docker:2375
     before_script:
@@ -20,27 +37,34 @@ deploy:
         - git clone "https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/taskmanager-group/taskmanager_frontend.git" ../frontend
         - docker run --rm -v "$(pwd)/../frontend:/app" -w /app node:22 sh -c "npm ci && npm run build"
         - mv ../frontend/dist ./frontend-dist
+    artifacts:
+        paths:
+            - docker-compose.prod.yml
+            - nginx/
+            - frontend-dist/
 
-        - echo "Deploying all artifacts to server..."
-        - apk add --no-cache openssh-client rsync
+deploy_to_ec2:
+    stage: deploy
+    image: alpine:latest
+    needs:
+        - test_backend
+        - build_artifacts
+    script:
+        - apk add --no-cache openssh-client docker-compose
         - echo "$SSH_PRIVATE_KEY" | base64 -d > deploy_key.pem
         - chmod 600 deploy_key.pem
         - export SSH_OPTIONS="-i deploy_key.pem -o StrictHostKeyChecking=no"
-        - mkdir -p ~/.ssh
-        - chmod 700 ~/.ssh
+        - mkdir -p ~/.ssh && chmod 700 ~/.ssh
         - ssh-keyscan $SSH_SERVER_IP >> ~/.ssh/known_hosts
 
+        - echo "Deploying artifacts to server..."
         - ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "rm -rf ~/taskmanager-prod && mkdir -p ~/taskmanager-prod"
-
         - rsync -avz -e "ssh $SSH_OPTIONS" ./docker-compose.prod.yml ./nginx ./frontend-dist ${SSH_USER}@${SSH_SERVER_IP}:~/taskmanager-prod/
 
         - |
             ssh $SSH_OPTIONS ${SSH_USER}@${SSH_SERVER_IP} "
               cd ~/taskmanager-prod &&
-              
-              # Rename the prod compose file to be the default
               mv docker-compose.prod.yml docker-compose.yml &&
-              
               docker login -u ${REGISTRY_USER} -p ${REGISTRY_PASSWORD} ${CI_REGISTRY} &&
               
               echo 'DATABASE_URL=postgresql://myuser:mypassword@db:5432/taskmanager' > .env &&
