--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dev": "tsx watch src/main.ts",
         "lint": "eslint . --ext .ts",
         "format": "prettier --write .",
-        "check-types": "tsc --noEmit"
+        "check-types": "tsc --noEmit",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
     },
     "repository": {
         "type": "git",
@@ -25,6 +26,15 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "^6.9.0",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/node": "22.18.6",
+        "@types/passport": "^1.0.16",
+        "@types/passport-google-oauth20": "^2.0.16",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.6",
+        "@types/yamljs": "^0.2.34",
         "axios": "^1.11.0",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
@@ -39,23 +49,21 @@
         "passport-google-oauth20": "^2.0.0",
         "pino": "^9.2.0",
         "pino-http": "^10.1.0",
+        "pino-pretty": "^11.2.1",
+        "prisma": "^6.9.0",
         "reflect-metadata": "^0.2.2",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
-        "yamljs": "^0.3.0",
-        "zod": "^3.25.56",
-        "@types/cors": "^2.8.19",
-        "@types/express": "^4.17.17",
-        "@types/jsonwebtoken": "^9.0.9",
-        "@types/node": "22.18.6",
-        "@types/passport": "^1.0.16",
-        "@types/passport-google-oauth20": "^2.0.16",
-        "@types/swagger-jsdoc": "^6.0.4",
-        "@types/swagger-ui-express": "^4.1.6",
-        "@types/yamljs": "^0.2.34",
-        "pino-pretty": "^11.2.1",
-        "prisma": "^6.9.0",
         "tsx": "^4.19.4",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "yamljs": "^0.3.0",
+        "zod": "^3.25.56"
+    },
+    "devDependencies": {
+        "@types/jest": "^30.0.0",
+        "@types/supertest": "^6.0.3",
+        "jest": "^30.2.0",
+        "supertest": "^7.1.4",
+        "ts-jest": "^29.4.4"
     }
 }
