--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 {
     "compilerOptions": {
-        "target": "es2020",
+        "target": "ES2020",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "module": "esnext",
+        "module": "ESNext",
         "rootDir": "./src",
-        "outDir": "./dist",
         "moduleResolution": "node",
+        "outDir": "./dist",
+        "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["node_modules", "__tests__"]
 }
