--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,6 +79,8 @@ deploy_to_ec2:
               docker compose pull app &&
               docker compose run --rm app npx prisma migrate deploy &&
               docker compose up -d --force-recreate
+              echo 'Pruning Docker system...' &&
+              docker system prune -af
             "
     rules:
         - if: $CI_COMMIT_BRANCH == 'main'
