--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
     - test
     - build
     - deploy
+    - pages
 
 test_backend:
     stage: test
@@ -87,5 +88,16 @@ deploy_to_ec2:
               docker compose up -d --force-recreate &&
               docker system prune -af
             "
+pages:
+    stage: pages
+    image: node:22-alpine
+    script:
+        - echo "Installing documentation generator..."
+        - npm install -g @redocly/cli
+        - echo "Building documentation..."
+        - redocly bundle -o public/index.html swagger.yaml
+    artifacts:
+        paths:
+            - public
     rules:
         - if: $CI_COMMIT_BRANCH == 'main'
