--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: registry.gitlab.com/taskmanager-group/webserver_taskmanager:latest
+    image: ${CI_REGISTRY_IMAGE}:latest
     restart: always
     env_file: [".env"]
     depends_on:
@@ -14,16 +14,14 @@ services:
       start_period: 30s
 
   nginx:
-    image: nginx:stable-alpine
+    image: ${CI_REGISTRY_IMAGE}/nginx:latest
     restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /var/www/html:/var/www/html
-      - ./frontend-dist:/usr/share/nginx/html/frontend
     depends_on:
       app:
         condition: service_healthy
