--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,48 +1,35 @@
 services:
   app:
-    image: ${CI_REGISTRY_IMAGE}:latest
+    image: registry.gitlab.com/taskmanager-group/webserver_taskmanager:__IMAGE_TAG__
     restart: always
     env_file: [".env"]
     depends_on:
-      db:
-        condition: service_started
+      db: { condition: service_started }
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/healthz"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 30s
-
   nginx:
-    image: ${CI_REGISTRY_IMAGE}/nginx:latest
+    image: registry.gitlab.com/taskmanager-group/webserver_taskmanager/nginx:__IMAGE_TAG__
     restart: always
-    ports:
-      - "80:80"
-      - "443:443"
+    ports: ["80:80", "443:443"]
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - /var/www/html:/var/www/html
+      ["/etc/letsencrypt:/etc/letsencrypt:ro", "/var/www/html:/var/www/html"]
     depends_on:
-      app:
-        condition: service_healthy
-
+      app: { condition: service_healthy }
   db:
     image: postgres:14.1-alpine
     restart: always
     environment:
-      - POSTGRES_USER=myuser
-      - POSTGRES_PASSWORD=mypassword
-      - POSTGRES_DB=taskmanager
-    ports:
-      - "5432:5432"
-    volumes:
-      - db_data:/var/lib/postgresql/data
-
+      POSTGRES_USER: myuser
+      POSTG-RES_PASSWORD: mypassword
+      POSTGRES_DB: taskmanager
+    volumes: ["db_data:/var/lib/postgresql/data"]
   certbot:
     image: certbot/certbot
     volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - /var/www/html:/var/www/html
-
+      ["/etc/letsencrypt:/etc/letsencrypt", "/var/www/html:/var/www/html"]
 volumes:
-  db_data:
+  db_data: {}
